# dlt_homework

./: .gitignore  Homework_dlt.ipynb  README.md  agent.py  main.py  pyproject.toml  q1_logfire.py  q2_logfire_to_duckdb.py  q3_input_tokens.py
.dlt/: secrets.toml
